2017-03-20  Sam Steingold  <sds@gnu.org>

	Fix non-blocking sockets on Mac OS X.
	* unix.d (NO_BLOCK_DECL): Do not accept handle.
	(START_NO_BLOCK): Accept on_fail, move function call from
	NO_BLOCK_DECL here.
	(END_NO_BLOCK): Accept on_fail.
	* win32.d (NO_BLOCK_DECL, START_NO_BLOCK, END_NO_BLOCK): Add.
	* socket.d (connect_via_ip): Use
	NO_BLOCK_DECL/START_NO_BLOCK/END_NO_BLOCK.
	* stream.d (listen_handle): Update the use of
	NO_BLOCK_DECL/START_NO_BLOCK/END_NO_BLOCK.
	* unixaux.d (fd_read, fd_write, sock_write): Ditto.
	Reported by Karsten Poeck <Karsten.Poeck@gmail.com>.

2017-03-20  Reini Urban  <reini.urban@gmail.com>
            Bruno Haible  <bruno@clisp.org>

	Fix text file processing Makefile rules for parallel make.
	* makemake.in (TXT_FILES): Use a different temporary file for each
	target file.

2017-03-20  Reini Urban  <reini.urban@gmail.com>
            Bruno Haible  <bruno@clisp.org>

	Fix intparam.h/floatparam.h Makefile rule for parallel make.
	* makemake.in (PARAMS): Use a different temporary file for each
	target file.

2017-03-20  Bruno Haible  <bruno@clisp.org>

	Bump version number after beta release.
	* version.sh: Bump version number to 2.49.50+.
	* version.h, aclocal.m4, src/configure: Regenerated.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Prepare beta release.
	* version.sh: Bump version number to 2.49.50.
	* version.h, aclocal.m4, src/configure: Regenerated.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Fix the recognition of Solaris.
	* lispbibl.d (UNIX_SUNOS5): Include also Solaris/x86_64.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Fix recognition of native Windows as target platform.
	* makemake.in (TOS): Set based on $host_os from autoconf.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Don't generate a broken Makefile when using the option --host/--build.
	Rationale:
	- clisp cannot be cross-built anyway (because of the memory image).
	  The earlier use-case of "makemake cross ..." of ca. 1993 was when